[package]
name = "interner"
version = "0.3.0"
edition = "2021"

[features]
default = ["yoke", "parking_lot", "bytemuck", "builder"]
yoke = ["dep:yoke", "dep:stable_deref_trait"]
parking_lot = ["dep:parking_lot"]
bytemuck = ["dep:bytemuck"]
doc_cfg = []
builder = ["bytemuck"]

[[bin]]
name = "main"
required-features = ["yoke"]

[dependencies]
memchr = "2.5.0"

[dependencies.parking_lot]
version = "0.12"
optional = true

[dependencies.yoke]
version = "0.6"
optional = true

[dependencies.bytemuck]
version = "1.11"
optional = true
features = ["extern_crate_std"]

[dependencies.stable_deref_trait]
version = "1.2"
optional = true
